@@ -2,7 +2,7 @@ Package: ma
 Type: Package
 Title: Model Averaging
 Version: 1.0-6
-Date: 2017-04-25
+Date: 2017-04-26
 Imports: doParallel, foreach, parallel, quadprog
 Suggests: crs, np, rgl
 Authors@R: person(given = "Jeffrey S.", family = "Racine", role = c("aut","cre"), email = "racinej@mcmaster.ca")
